--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             padding: 10px;
         }
     </style>
+      <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 </head>
 <body>
     <nav>
