--- a/index.html
+++ b/index.html
@@ -412,13 +412,8 @@ AFRAME.registerComponent('thumbstick-logging',{
                visible="false"></a-plane>
       </a-scene>
 
-    <div id="text">
-      <h1>Swordfish</h1>
-    
-      <p>
-       Demo
-      </p>
-    
+      <div class="info-box">
+        Reality Overlay specializes in building immersive Mixed Reality (MR) and Augmented Reality (AR) websites. Transform your online presence with us.
     </div>
     <script>
       function moveSharkAuto() {
