--- a/index.html
+++ b/index.html
@@ -5,36 +5,50 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+
     <style>
-      body {
-          background-color: #000;
-          color: #0f0;
-          font-family: 'Courier New', monospace;
-      }
+   /* Base styles */
+nav {
+  background-color: #333;
+}
 
-      nav {
-          background-color: #000;
-          border-bottom: 2px solid #0f0;
-      }
+.menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
 
-      nav ul {
-          padding: 0;
-          list-style-type: none;
-      }
+.menu li {
+  margin: 0 10px;
+}
 
-      nav ul li {
-          display: inline;
-          margin-right: 10px;
-      }
+.menu li a {
+  color: #fff;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
 
-      nav ul li a {
-          color: #0f0;
-          text-decoration: none;
-      }
+.menu li a i {
+  margin-right: 5px;
+}
 
-      nav ul li a:hover {
-          color: #00f;
-      }
+/* Responsive styles */
+@media (max-width: 768px) {
+  .menu {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+
+  .menu li {
+    margin: 10px 10px 10px 0;
+  }
+}
+
 
       .info-box {
           position: absolute;
@@ -245,6 +259,15 @@ AFRAME.registerComponent('thumbstick-logging',{
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
       </ul>
+  </nav>
+
+  <nav>
+    <ul class="menu">
+      <li><a href="#"><i class="fas fa-address-book"></i> Contacts</a></li>
+      <li><a href="#"><i class="fas fa-headphones"></i> Headset</a></li>
+      <li><a href="#"><i class="fas fa-briefcase"></i> Portfolio</a></li>
+      <li><a href="#"><i class="fas fa-user"></i> About Us</a></li>
+    </ul>
   </nav>
 
   <div class="info-box">
