--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@ AFRAME.registerComponent('thumbstick-logging',{
             <a-entity class="collidable" geometry="primitive: box" position="1 0 0"></a-entity>
                -->
 
-            <a-entity id="fishModels" position="0 -8 -5" scale="1 1 1">
+            <!-- <a-entity id="fishModels" position="0 -8 -5" scale="1 1 1">
                 <a-entity  position="0 0 0" rotation="0 0 0"
                           gltf-model="#fish"
                           animation-mixer
                           shadow="cast: false; receive: false">
                 </a-entity>
-            </a-entity> 
+            </a-entity>  -->
 
             <a-entity id="container" position="30 1 -2"
                 animation__scale="property: scale; dir: alternate; dur: 200;
@@ -410,7 +410,7 @@ AFRAME.registerComponent('thumbstick-logging',{
                 hide-in-ar-mode>
       </a-entity> -->
 
-       <a-entity environment="preset: default; skyType: color ;lighting: none; fog: 0; shadow: none; lightPosition: 0 0 0"
+       <a-entity environment="preset: tron; skyType: color ;lighting: none; fog: 1; shadow: none; lightPosition: 0 0 0"
                 hide-in-ar-mode>
       </a-entity>
       
