--- a/index.html
+++ b/index.html
@@ -500,6 +500,7 @@ AFRAME.registerComponent('thumbstick-logging',{
         <ul>
             <li>MR/AR mobile apps or websites. </li>
             <li>AI chatbots and AI driven characters.</li>
+            <li>Chat GPT plugins.</li>
         </ul>
     </div>
 
