--- a/arartpreview/support.html
+++ b/arartpreview/support.html
@@ -21,7 +21,7 @@
     <p>c. You are responsible for maintaining the confidentiality of your account information and for all activities that occur under your account.</p>
     
     <h2>4. Intellectual Property</h2>
-    <p>a. All intellectual property rights related to the App, including but not limited to copyrights, trademarks, and trade secrets, are owned by the Company.</p>
+    <p>a. All intellectual property rights related to the App, including but not limited to copyrights, trademarks, and trade secrets, are owned by the Barnaby Menage.</p>
     <p>b. You agree not to infringe upon or misappropriate any intellectual property rights associated with the App.</p>
     
     <h2>5. Privacy</h2>
