--- a/arartpreview/index.html
+++ b/arartpreview/index.html
@@ -75,6 +75,8 @@
             <li>Discover new design possibilities and make informed decisions.</li>
             <!-- <li>Save and share your favorite designs with friends and clients.</li> -->
         </ul>
+        <p><a style="font-size: 12px;color: #ffffff !important;" href="privacypolicy.html">Privacy Policy</a>|<a style="font-size: 12px;color: #ffffff !important;" href="support.html">Support Policy</a></p>
+        <p></p>
         
         <button class="cta-button">Download Now (coming soon)</button>
     </div>
