--- a/arartpreview/support.html
+++ b/arartpreview/support.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Terms and Conditions</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+        
+        h1 {
+            font-size: 24px;
+            margin: 0 0 20px;
+        }
+        
+        p {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>Terms and Conditions</h1>
