--- a/arartpreview/index.html
+++ b/arartpreview/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div class="container">
-        <div style="background-image: url(IMG_2665.PNG);background-size: contain;" width="100%" height="30vh"></div>
+        <div style="background-image: url('IMG_2665.PNG');background-size: contain;width:100%;height:30vh"></div>
         <h1>AR Art Preview App</h1>
         
         <p>Make and preview art work in Augmented Reality (AR) with our cutting-edge AR app. Experience the future of interior design right from your smartphone.</p>
