--- a/arartpreview/index.html
+++ b/arartpreview/index.html
@@ -63,8 +63,8 @@
 </head>
 <body>
     <div class="container">
-        <div style="background-image: url('IMG_2665.PNG');background-size: contain;width:100%;height:30vh">
-            <img src="IMG_2665.PNG" width="400" height="250" />
+        <div style="background-image: url('header.PNG');background-size: contain;width:100%;height:30vh;padding: 20px;">
+            <img src="header.PNG" width="400" height="250" />
         </div>
         <h1>AR Art Preview App</h1>
         
