--- a/arartpreview/index.html
+++ b/arartpreview/index.html
@@ -64,7 +64,7 @@
 <body>
     <div class="container">
         <div style="background-image: url('header.PNG');background-size: contain;width:100%;height:30vh;padding: 20px;">
-            <img src="header.PNG" width="400" height="250" />
+            <!-- <img src="header.PNG" width="400" height="250" /> -->
         </div>
         <h1>AR Art Preview App</h1>
         
