--- a/arartpreview/support.html
+++ b/arartpreview/support.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <h1>Terms and Conditions</h1>
-    <p>Please read these Terms and Conditions ("Terms") carefully before using our iOS App ("AR Art Preview"). These Terms govern your access and use of the AR Art Preview provided by Barnaby Menage (Reality Overlay).</p>
+    <p>Please read these Terms and Conditions ("Terms") carefully before using our iOS App ("AR Art Preview"). These Terms govern your access and use of the AR Art Preview provided by Barnaby Menage (aka Reality Overlay).</p>
     
     <h2>1. Acceptance of Terms</h2>
     <p>By downloading, installing, or using the AR Art Preview, you agree to be bound by these Terms. If you do not agree to these Terms, you may not use the AR Art Preview.</p>
