--- a/arartpreview/support.html
+++ b/arartpreview/support.html
@@ -57,7 +57,7 @@
     <p>b. We may also restrict or terminate your access to the AR Art Preview for any reason without liability.</p>
     
     <h2>9. Governing Law and Jurisdiction</h2>
-    <p>These Terms shall be governed by and construed in accordance with the laws of the United Kingdom. Any disputes arising out of or in connection with these Terms shall be subject to the exclusive jurisdiction of the courts in [Your Jurisdiction].</p>
+    <p>These Terms shall be governed by and construed in accordance with the laws of the United Kingdom. Any disputes arising out of or in connection with these Terms shall be subject to the exclusive jurisdiction of the courts in the United Kingdom.</p>
     
     <h2>10. Severability</h2>
     <p>If any provision of these Terms is found to be invalid or unenforceable, the remaining provisions shall continue to be valid and enforceable to the fullest extent permitted by law.</p>
