--- a/links.html
+++ b/links.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<a href=" https://rnwgu-91-125-215-195.a.free.pinggy.link">LINK LOCAL</a>
+<a href="https://rniwc-91-125-215-195.a.free.pinggy.link">LINK LOCAL</a>
 </body>
 </html>
