--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ AFRAME.registerComponent('thumbstick-logging',{
         
         <a-asset-item id="fish" src="https://icmproject.s3.eu-west-1.amazonaws.com/webxr_threejs_example/fish.glb" response-type="arraybuffer"></a-asset-item>
         <a-asset-item id="underwater" src="https://icmproject.s3.eu-west-1.amazonaws.com/webxr_threejs_example/underwaterScene.glb" response-type="arraybuffer"></a-asset-item>
-        <a-asset-item id="shark" src="https://icmproject.s3.eu-west-1.amazonaws.com/webxr_threejs_example/shar.glb" response-type="arraybuffer"></a-asset-item>
+        <a-asset-item id="shark" src="https://realityoverlay.com/shar.glb" response-type="arraybuffer"></a-asset-item>
         
         <!-- <a-entity id="spinosaurus" 
         fbx-model=”src: url(https://icmproject.s3.eu-west-1.amazonaws.com/webxr_threejs_example/Goldfish.fbx);” >
