--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ AFRAME.registerComponent('thumbstick-logging',{
                 </a-entity>
             </a-entity>  -->
 
-            <a-entity id="container" position="-30 3 -30"
+          <!--  <a-entity id="container" position="-30 3 -30"
                 animation__scale="property: scale; dir: alternate; dur: 200;
                                   easing: easeInSine; loop: true; from: 1 1 1; to: 1.2 1 1.2;
                                   startEvents: scale; pauseEvents: animationPause;
@@ -341,7 +341,7 @@ AFRAME.registerComponent('thumbstick-logging',{
                                   easing: easeInSine; loop: true; to: #5F5;
                                   startEvents: color; pauseEvents: animationPause;
                                   resumeEvents: animationResume; restartEvents: animationRestart"
-                                  >
+                                  >-->
             
 
               <!--  <a-entity id="sharkModel" position="0 0 2" scale="2 2 2">
